fix button color contrast

--- a/_assets/css/uswds/_button.scss
+++ b/_assets/css/uswds/_button.scss
@@ -31,7 +31,11 @@
   &--baselighter {
     @include u-bg("base-lighter");
     &:hover {
-      @include u-bg("base");
+      @include u-bg("primary-vivid");
+      &:visited,
+      &:link {
+        @include u-text("white");
+      }
     }
 
     &:visited,
